json file returned

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
             xhttp.onload = function () {
                 document.getElementById("example").innerHTML = this.responseText;
             }
-            xhttp.open("GET", "text.txt")
+            xhttp.open("GET", "text.json")
             xhttp.send()
         }
     </script>
