--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width" , initial-scale="1.0">
     <title>Document</title>
 </head>
 
@@ -14,6 +14,7 @@
             width: 300px;
             height: 300px;
             margin: 0 auto;
+            margin-bottom: 20px;
             border: 1px solid black;
             border-radius: 6px;
             background-color: beige;
@@ -38,21 +39,24 @@
             border-radius: 6px;
             cursor: pointer;
         }
-    </style>
-    <div class="example" id="example">
-        <h3 class="example__heading">Naciśnij guziczek i coś się stanie.</h3>
-        <button class="example__button" type="button" onclick="funkcja()">Niech się dzieje!</button>
-    </div>
-    <script>
-        function funkcja() {
-            const xhttp = new XMLHttpRequest();
-            xhttp.onload = function () {
-                document.getElementById("example").innerHTML = this.responseText;
-            }
-            xhttp.open("GET", "text.json")
-            xhttp.send()
+
+        form {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            gap: 10px;
         }
-    </script>
+    </style>
+    <div class="example" id="example_2">
+        <h3 class="example__heading">Wpisz jakieś dane</h3>
+        <form id="names" method="POST" action="http://127.0.0.1:3000/posted">
+            <label for="name">Imię:</label>
+            <input id="name" type="text" name="name">
+            <label for="surname">Nazwisko:</label>
+            <input id="surname" type="text" name="surname">
+            <input type="submit" value="Prześlij">
+        </form>
+    </div>
 </body>
 
 </html>
