--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,14 @@
             cursor: pointer;
         }
 
+        .example__text {
+            color: black;
+            width: 200px;
+            height: 100px;
+            border: 1px solid black;
+            background-color: white;
+        }
+
         form {
             display: flex;
             justify-content: center;
@@ -49,7 +57,7 @@
     </style>
     <div class="example" id="example_2">
         <h3 class="example__heading">Wpisz jakieś dane</h3>
-        <form id="names" method="POST" action="http://127.0.0.1:3000/posted">
+        <form id="names">
             <label for="name">Imię:</label>
             <input id="name" type="text" name="name">
             <label for="surname">Nazwisko:</label>
@@ -57,6 +65,36 @@
             <input type="submit" value="Prześlij">
         </form>
     </div>
+    <div class="example">
+        <p class="example__text" id="example__text"></p>
+    </div>
 </body>
+<script>const name = document.querySelector("#name");
+    const surname = document.querySelector("surname");
+    const form = document.querySelector("#names");
+    const responseText = document.querySelector('.example__text');
+    let data;
+    const posting = (event) => {
+        event.preventDefault();
+        const {
+            elements: { name, surname },
+        } = event.currentTarget;
+        data = {
+            name: name.value,
+            surname: surname.value,
+        };
+        fetch("/", {
+            method: "POST",
+            headers: {
+                Accept: "application/json",
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify(data),
+        })
+            .then((response) => response.json())
+            .then((response) => responseText.innerHTML = JSON.stringify(response));
+    };
+    form.addEventListener("submit", posting);
+</script>
 
 </html>
