--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,10 @@
             font-size: 24px;
         }
 
+        .example--height {
+            height: 60px;
+        }
+
         .example__heading {
             color: brown;
             text-align: center;
@@ -41,9 +45,11 @@
         }
 
         .example__text {
+            font-size: 16px;
+            margin: 4px 0 4px;
             color: black;
             width: 200px;
-            height: 100px;
+            height: 40px;
             border: 1px solid black;
             background-color: white;
         }
@@ -65,19 +71,34 @@
             <input type="submit" value="Prześlij">
         </form>
     </div>
-    <div class="example">
-        <p class="example__text" id="example__text"></p>
+    <div class="example example--height" id="example_1">
     </div>
 </body>
-<script>const name = document.querySelector("#name");
+<script>
+    const example = document.querySelector('.example--height');
+    const name = document.querySelector("#name");
     const surname = document.querySelector("surname");
     const form = document.querySelector("#names");
     const responseText = document.querySelector('.example__text');
     let data;
+    let heightCounter = 60;
+    let responseName;
+    let responseSurname;
+    let responseLength;
+    let responseUser = [];
+
+    const addPar = (someText) => {
+        const newPar = document.createElement('p');
+        newPar.classList.add('example__text');
+        newPar.innerHTML = someText;
+        example.style.height = `${heightCounter}px`;
+        heightCounter += 50;
+        example.appendChild(newPar);
+    }
     const posting = (event) => {
         event.preventDefault();
         const {
-            elements: { name, surname },
+            elements: { id, name, surname },
         } = event.currentTarget;
         data = {
             name: name.value,
@@ -92,7 +113,12 @@
             body: JSON.stringify(data),
         })
             .then((response) => response.json())
-            .then((response) => responseText.innerHTML = JSON.stringify(response));
+            .then((response) => {
+                responseLength = response.length
+                responseInnerText = `user no. ${response[responseLength - 1]['userId']} is: <br>${response[responseLength - 1]['user']['name']} ${response[responseLength - 1]['user']['surname']}`;
+                addPar(responseInnerText);
+                console.log(JSON.stringify(response));
+            })
     };
     form.addEventListener("submit", posting);
 </script>
